--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-image: Ubuntu2204
+version: 1.0.{build}
 
 branches:
   only:
@@ -6,11 +6,11 @@ branches:
 
 environment:
   matrix:
-    - nodejs_version: "18.0.0"
+    - nodejs_version: "18.12.0" 
 
 init:
   - echo "Installing NVM..."
-  - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
+  - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
   - export NVM_DIR="$HOME/.nvm"
   - source "$NVM_DIR/nvm.sh"
   - echo "Installing Node.js..."
