--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 version: 1.0.{build}
 
+image: Ubuntu2204
+
 branches:
   only:
     - main
@@ -12,7 +14,7 @@ init:
   - echo "Installing NVM..."
   - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
   - export NVM_DIR="$HOME/.nvm"
-  - source "$NVM_DIR/nvm.sh"
+  - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  
   - echo "Installing Node.js..."
   - nvm install $nodejs_version
   - nvm use $nodejs_version
